--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -20,7 +20,7 @@
         <ul class='properties-values list'>
           <li class='value-item'><span class='movie__vote'>{{vote_average}}</span> / <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
           <li class='value-item'>{{popularity}}</li>
-          <li class='value-item'>{{original_title}}</li>
+          <li class='value-item movie__title'>{{original_title}}</li>
           <li class='value-item'>{{stringGenres}}</li>
         </ul>
       </div>
