--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 .header-section {
   width: 100%;
   height: 230px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   background-position: bottom right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -9,74 +9,102 @@
 
 .home-header_img {
   display: block;
-  background-image:
-  linear-gradient(to top left, $header-background-color, $header-background-color), 
-  url('./../images/headerbg/bgimg.jpg');
+  background-image: linear-gradient(to top left, $header-background-color, $header-background-color),
+    url('./../images/headerbg/bgimg.jpg');
 
   @media screen and (min-resolution: 2dppx) {
-    background-image: 
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/bgimg@2x.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/bgimg@2x.jpg');
   }
 
   @media screen and (min-width: $mobile-width) and (max-width: $tablet-width) {
-    background-image: 
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/bgimg760.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/bgimg760.jpg');
   }
 
   @media screen and (min-resolution: 2dppx) and (min-width: $mobile-width) and (max-width: $tablet-width) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/bgimg760@2x.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/bgimg760@2x.jpg');
   }
 
   @media screen and (min-width: $tablet-width) {
-    background-image: 
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/bgimg1024.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/bgimg1024.jpg');
   }
 
   @media screen and (min-resolution: 2dppx) and (min-width: $tablet-width) {
-    background-image: 
-    inear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/bgimg1024.jpg');
+    background-image: inear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/bgimg1024.jpg');
   }
 }
 
 .library-header_img {
-  background-image: 
-  linear-gradient(to top left, $header-background-color, $header-background-color), 
-  url('./../images/headerbg/libraryimg.jpg');
+  background-image: linear-gradient(to top left, $header-background-color, $header-background-color),
+    url('./../images/headerbg/libraryimg.jpg');
 
   @media screen and (min-resolution: 2dppx) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/libraryimg@2x.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/libraryimg@2x.jpg');
   }
 
   @media screen and (min-width: $mobile-width) and (max-width: $tablet-width) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color),
-    url('./../images/headerbg/libraryimg760.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/libraryimg760.jpg');
   }
 
   @media screen and (min-resolution: 2dppx) and (min-width: $mobile-width) and (max-width: $tablet-width) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/libraryimg760@2x.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/libraryimg760@2x.jpg');
   }
 
   @media screen and (min-width: $tablet-width) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color),
-    url('./../images/headerbg/libraryimg1024.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/libraryimg1024.jpg');
   }
 
   @media screen and (min-resolution: 2dppx) and (min-width: $tablet-width) {
-    background-image:
-    linear-gradient(to top left, $header-background-color, $header-background-color), 
-    url('./../images/headerbg/libraryimg1024@2x.jpg');
+    background-image: linear-gradient(
+        to top left,
+        $header-background-color,
+        $header-background-color
+      ),
+      url('./../images/headerbg/libraryimg1024@2x.jpg');
   }
 }
 
@@ -119,27 +147,26 @@
   align-items: center;
   text-decoration: none;
   cursor: pointer;
-  
 
   h1 {
     margin-left: 12px;
     &:hover,
     &:focus {
       color: $accent-color;
-      transition:  $animation-time  $animation-function;
+      transition: $animation-time $animation-function;
       transition-property: color;
     }
   }
 }
 
-.logo-icon{
+.logo-icon {
   stroke: #818181;
-  
-  @include for-phone-only{ 
+
+  @include for-phone-only {
     &:hover,
     &:focus {
-        stroke: $accent-color;
-        transition: get-transition-prop(stroke);
+      stroke: $accent-color;
+      transition: get-transition-prop(stroke);
     }
   }
 }
@@ -215,7 +242,7 @@
 
     &:hover,
     &:focus {
-      background-color: rgba(24,24,24,0.8);
+      background-color: rgba(24, 24, 24, 0.8);
       outline: none;
       border-bottom: none;
     }
@@ -258,6 +285,15 @@
   border: 0.5px solid $accent-text-color;
   border-radius: 5px;
   display: block;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    border: none;
+    -webkit-box-shadow: 1px 1px 36px -3px rgba(255, 107, 1, 0.82);
+    box-shadow: 1px 1px 36px -3px rgba(255, 107, 1, 0.82);
+  }
 
   @include for-phone-up {
     width: 136px;
