--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -18,7 +18,7 @@
         <li class='value-item'><span class='vote'>{{vote_average}}</span>/{{vote_count}}</li>
         <li class='value-item'>{{popularity}}</li>
         <li class='value-item'>{{original_title}}</li>
-        <li class='value-item'>{{stringGenres}}</li>
+        <li class='value-item genre'></li>
       </ul>
     </div>
     <h3>About</h3>
@@ -27,5 +27,6 @@
       <button type='button' class='modal-window-btn' data-action='add-to-watched'>ADD TO WATCHED</button>
       <button type='button' class='modal-window-btn' data-action='add-to-queue'>ADD TO QUEUE</button>
     </div>
+    <button class='show-similar-btn'>Show similar movies</button>
   </div>
 </div>
