add zoom on hover card

--- a/src/sass/layouts/_films-list-section.scss
+++ b/src/sass/layouts/_films-list-section.scss
@@ -38,5 +38,9 @@
 
   @include for-desktop-up {
     width: 274px;
+    transition: transform 0.2s;
+    &:hover {
+      transform: scale(1.03);
+    }
   }
 }
