--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './layouts/pagination';
 
 @import './components/spinner';
+@import './components/main-images';
 @import './components/modal';
 @import './components/footer-modal';
 @import './components/to-top-btn';
