--- a/src/sass/layouts/_films-list-section.scss
+++ b/src/sass/layouts/_films-list-section.scss
@@ -1,10 +1,10 @@
 .films {
   padding-top: 20px;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
 
   @include for-tablet-up {
     padding-top: 60px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
 }
 
