--- a/src/templates/one-card-markup.hbs
+++ b/src/templates/one-card-markup.hbs
@@ -16,16 +16,9 @@
 
       <div class='one-card_overlay'>
         <div class='one-card__average'>{{vote_average}}</div>
-        <button
-          type='button'
-          class='modal-window-btn_one-card'
-          data-action='add-to-watched_one-card'
-        >ADD TO WATCHED</button>
-        <button
-          type='button'
-          class='modal-window-btn_one-card'
-          data-action='add-to-queue_one-card'
-        >ADD TO QUEUE</button>
+        <button type='button' class='btn_one-card' data-action='add-to-watched_one-card'>ADD TO
+          WATCHED</button>
+        <button type='button' class='btn_one-card' data-action='add-to-queue_one-card'>ADD TO QUEUE</button>
       </div>
     </div>
   </li>
