add backgraund images to main

--- a/src/sass/components/_main-images.scss
+++ b/src/sass/components/_main-images.scss
@@ -1,5 +1,11 @@
-.main-bgimage {
-  background-image: url('./../images/backgraund-pattern/pattern-light.jpg');
-  // background-image: url('./../images/backgraund-pattern/pattern-dark.jpg');
-  margin: 0;
+.home-main-bgimage {
+  background-image: url('./../images/main-backgraund-images/pattern-home-light.jpg');
+  //background-image: url('./../images/main-backgraund-images/pattern-home-dark.jpg');
+}
+
+.library-main-bgimage {
+  background-image: url('./../images/main-backgraund-images/pattern-library-light.jpg');
+  //background-image: url('./../images/main-backgraund-images/pattern-library-dark.jpg');
+
+  flex-grow: 1;
 }
