--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/modal';
 @import './components/footer-modal';
 @import './components/to-top-btn';
+@import './components/modal-trailer';
 
 @import './layouts/footer';
 @import './layouts/films-list-section';
