--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -4,9 +4,9 @@
       <use href='sprite.svg#icon-close'></use>
     </svg>
   </button>
-  <div class="modal__content-wrapper">
+  <div class='modal__content-wrapper'>
     <div class='movie__content'>
-     <img src={{posterUrl}} alt={{title}} class='movie__poster' />
+      <img src={{posterUrl}} alt={{title}} class='movie__poster' />
     </div>
     <div class='movie__content'>
       <h2 class='movie__name'>{{title}}</h2>
@@ -18,14 +18,17 @@
           <li class='property-item'>Genre</li>
         </ul>
         <ul class='properties-values list'>
-          <li class='value-item'><span class='movie__vote'>{{vote_average}}</span> / <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
+          <li class='value-item'><span class='movie__vote'>{{vote_average}}</span>
+            /
+            <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
           <li class='value-item'>{{popularity}}</li>
           <li class='value-item movie__title'>{{original_title}}</li>
           <li class='value-item'>{{stringGenres}}</li>
         </ul>
       </div>
-      <h3 class="movie__about-header">About</h3>
+      <h3 class='movie__about-header'>About</h3>
       <p class='movie__about'>{{overview}}</p>
+      <button type='button' class='movie__button-trailer'>show trailer</button>
       <div class='movie__buttons'>
         <button type='button' class='movie__btn' data-action='add-to-watched'>Add wo Watched</button>
         <button type='button' class='movie__btn' data-action='add-to-queue'>Add to queue</button>
