--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,10 @@
      
       <ul class="page-nav_wrapper">
         <li>
-          <button class="nav-el nav-el_button navEl active-page" page="home">HOME</button>  
+          <button class="nav-el nav-el_button navEl active-page" data-page="home">HOME</button>  
         </li>
         <li>
-          <button class="nav-el nav-el_button navEl" page="library">MY LIBRARY</button>
+          <button class="nav-el nav-el_button navEl" data-page="library">MY LIBRARY</button>
         </li> 
       </ul>
     </div>
