--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -32,6 +32,10 @@
         <button type='button' class='movie__btn' data-action='add-to-watched'>Add wo Watched</button>
         <button type='button' class='movie__btn' data-action='add-to-queue'>Add to queue</button>
       </div>
+
     </div>
+  </div>
+  <h3 class='s-title'>Similar movies:</h3>
+  <div class='similar'>
   </div>
 </div>
