added dark theme mode

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,10 +14,10 @@
 @import './layouts/pagination';
 
 @import './components/spinner';
-@import './components/main-images';
 @import './components/modal';
 @import './components/footer-modal';
 @import './components/to-top-btn';
+@import './components/theme-switcher';
 
 @import './layouts/footer';
 @import './layouts/films-list-section';
