fix styles for prop.container, header, votes

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -79,6 +79,8 @@
 
 .movie__name {
   font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 500;
 
   @include for-desktop-up {
     font-size: 30px;
@@ -87,17 +89,13 @@
 
 .properties {
   display: flex;
-  justify-content: space-between;
   margin-top: 20px;
   margin-bottom: 20px;
-  max-width: 260px;
-  @include for-desktop-up {
-    width: 260px;
-  }
 }
 
-.properties-values {
-  width: 130px;
+.properties-list {
+  min-width: 80px;
+  width: 108px;
 }
 
 .property-item {
@@ -129,7 +127,6 @@
   color: white;
   background-color: $accent-color;
   padding: 2px 10px;
-  width: 36px;
   text-align: center;
   border-radius: 5px;
 }
