--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -26,9 +26,11 @@
           <li class='value-item genre'></li>
         </ul>
       </div>
-      <h3 class='movie__about-header'>About</h3>
+      <div class='movie__about-div'>
+        <h3 class='movie__about-header'>About</h3>
+        <button type='button' class='movie__button-trailer hidden-button'>show trailer</button>
+      </div>
       <p class='movie__about'>{{overview}}</p>
-      <button type='button' class='movie__button-trailer'>show trailer</button>
       <div class='movie__buttons'>
         <button type='button' class='movie__btn' data-action='add-to-watched'>Add wo Watched</button>
         <button type='button' class='movie__btn' data-action='add-to-queue'>Add to queue</button>
