--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
   overflow: auto;
-  margin: $column-gap-mobile;
+  // margin: $column-gap-mobile;
   padding: 48px $column-gap-mobile;
   color: $details-card-main-text-color;
   background-color: $main-background-color;
@@ -12,7 +12,7 @@
   @include for-tablet-up {
     padding: 40px $column-gap;
     max-width: 618px;
-    margin: 0;
+    // margin: 0;
   }
 
   @include for-desktop-up {
