--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -1,41 +1,47 @@
 <div class='modal'>
-  <button type='button' class='modal__close' data-action='modal-close'>
-    <svg class='modal__icon' width='30' height='30'>
-      <use href='sprite.svg#icon-close'></use>
-    </svg>
-  </button>
-  <div class='modal__content-wrapper'>
-    <div class='movie__content'>
-      <img src={{posterUrl}} alt={{title}} class='movie__poster' />
-    </div>
-    <div class='movie__content'>
-      <h2 class='movie__name'>{{title}}</h2>
-      <div class='properties'>
-        <ul class='properties-list list'>
-          <li class='property-item'>Vote/Votes</li>
-          <li class='property-item'>Popularity</li>
-          <li class='property-item'>Original Title</li>
-          <li class='property-item'>Genre</li>
-        </ul>
-        <ul class='properties-values list'>
-          <li class='value-item'><span class='movie__vote'>{{vote_average}}</span>
-            /
-            <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
-          <li class='value-item'>{{popularity}}</li>
-          <li class='value-item movie__title'>{{original_title}}</li>
-          <li class='value-item genre'></li>
-        </ul>
+  <div class='modal-window'>
+    <button type='button' class='modal__close' data-action='modal-close'>
+      <svg class='modal__icon' width='30' height='30'>
+        <use href='sprite.svg#icon-close'></use>
+      </svg>
+    </button>
+    <div class='modal__content-wrapper'>
+      <div class='movie__content'>
+        <img
+          src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+          alt={{title}}
+          class='movie__poster'
+        />
       </div>
-      <h3 class='movie__about-header'>About</h3>
-      <p class='movie__about'>{{overview}}</p>
-      <div class='movie__buttons'>
-        <button type='button' class='movie__btn' data-action='add-to-watched'>Add wo Watched</button>
-        <button type='button' class='movie__btn' data-action='add-to-queue'>Add to queue</button>
-      </div>
+      <div class='movie__content'>
+        <h2 class='movie__name'>{{title}}</h2>
+        <div class='properties'>
+          <ul class='properties-list list'>
+            <li class='property-item'>Vote/Votes</li>
+            <li class='property-item'>Popularity</li>
+            <li class='property-item'>Original Title</li>
+            <li class='property-item'>Genre</li>
+          </ul>
+          <ul class='properties-values list'>
+            <li class='value-item'><span class='movie__vote'>{{vote_average}}</span>
+              /
+              <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
+            <li class='value-item'>{{popularity}}</li>
+            <li class='value-item movie__title'>{{original_title}}</li>
+            <li class='value-item genre'></li>
+          </ul>
+        </div>
+        <h3 class='movie__about-header'>About</h3>
+        <p class='movie__about'>{{overview}}</p>
+        <div class='movie__buttons'>
+          <button type='button' class='movie__btn' data-action='add-to-watched'>Add to Watched</button>
+          <button type='button' class='movie__btn' data-action='add-to-queue'>Add to queue</button>
+        </div>
 
+      </div>
     </div>
-  </div>
-  <h3 class='s-title'>Similar movies:</h3>
-  <div class='similar'>
+    <h3 class='s-title'>Similar movies:</h3>
+    <div class='similar'>
+    </div>
   </div>
 </div>
