added white color to the list-is-empty__text in dark mode

--- a/src/sass/components/_theme-switcher.scss
+++ b/src/sass/components/_theme-switcher.scss
@@ -35,7 +35,8 @@ html[data-theme='dark-theme'] {
   .card__name,
   .tui-page-btn,
   .movie__button-trailer,
-  .movie__about-header {
+  .movie__about-header,
+  .list-is-empty__text {
     color: #fff;
   }
 
