--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -130,9 +130,9 @@
   }
 }
 
-.genre {
-  line-height: 20px;
-}
+// .genre {
+//   line-height: 20px;
+// }
 
 .movie__vote {
   display: inline-block;
