--- a/src/sass/components/_clear-library-button.scss
+++ b/src/sass/components/_clear-library-button.scss
@@ -69,17 +69,13 @@
 .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: $accent-color;
-  color: $accent-text-color;
-  text-transform: uppercase;
+  color: $accent-color;
   text-align: center;
-  border-radius: 6px;
-  padding: 15px 5px;
  
   /* Position the tooltip text */
   position: absolute;
-  bottom: 20px;
-  right: 40px;
+  bottom: 25px;
+  right: 5px;
 }
 
 .tooltip:hover .tooltiptext {
