--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -28,7 +28,7 @@
               <span class='movie__vote movie__vote--light'>{{vote_count}}</span></li>
             <li class='value-item'>{{popularity}}</li>
             <li class='value-item movie__title'>{{original_title}}</li>
-            <li class='value-item genre'></li>
+            <li class='value-item genre'>{{fullGenresList}}</li>
           </ul>
         </div>
         <div class='movie__about-div'>
