--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -95,37 +95,34 @@
 
 .properties {
   display: flex;
+  justify-content: space-between;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .properties-list {
   min-width: 80px;
-  width: 108px;
+  width: 70px;
+  margin-right: 15px;
 }
 
 .property-item {
-  display: flex;
-  justify-content: space-between;
+  border: 1px solid grey;
+  height: 25px;
   color: $details-card-items-text-color;
   &:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
 .value-item {
+  height: 25px;
+  border: 1px solid grey;
   color: black;
   font-weight: 500;
-  &:first-child {
-    margin-bottom: 6px;
+  &:not(:last-child) {
+    margin-bottom: 8px;
   }
-  &:not(:first-child) {
-    margin-bottom: 10px;
-  }
-}
-
-.genre {
-  line-height: 20px;
 }
 
 .movie__vote {
