--- a/src/templates/one-card-markup.hbs
+++ b/src/templates/one-card-markup.hbs
@@ -3,12 +3,7 @@
     <div class='one-card'>
       <div class='one-card_box'>
         <div class='one-card__box-img'>
-          <img
-            class='one-card__img'
-            src='https://image.tmdb.org/t/p/w500{{poster_path}}'
-            alt={{title}}
-            id='{{id}}'
-          />
+          <img class='one-card__img' src={{posterUrl}} alt={{title}} id='{{id}}' />
         </div>
         <div class='one-card__title-box'>
           <h4 class='one-card__title'>{{title}}</h4>
