fix poster path in modal

--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -8,7 +8,7 @@
     <div class='modal__content-wrapper'>
       <div class='movie__content-image'>
         <img
-          src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+          src='{{posterUrl}}'
           alt={{title}}
           class='movie__poster'
         />
