fix broken footer modal

--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,19 +1,26 @@
 <div id="footer-modal">
-  <div class="footer-modal modal">
+  <div class="footer-modal modal-window">
     <button type="button" class="modal__close" data-action="modal-close">
       <svg class="modal__icon" width="30" height="30">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
     </button>
     <div class="slider">
-      <div class="slider__outer-wrapper">
-      </div>
-      <button type="button" class="slider__navigation slider__navigation--left" data-action="prevSlide">
+      <div class="slider__outer-wrapper"></div>
+      <button
+        type="button"
+        class="slider__navigation slider__navigation--left"
+        data-action="prevSlide"
+      >
         <svg class="slider__icon" width="40" height="40">
           <use href="./images/sprite.svg#icon-arrow-left"></use>
         </svg>
       </button>
-      <button type="button" class="slider__navigation slider__navigation--right" data-action="nextSlide">
+      <button
+        type="button"
+        class="slider__navigation slider__navigation--right"
+        data-action="nextSlide"
+      >
         <svg class="slider__icon" width="40" height="40">
           <use href="./images/sprite.svg#icon-arrow-right"></use>
         </svg>
