--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -100,39 +100,23 @@
 }
 
 .properties {
-  display: flex;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.properties-list {
-  min-width: 80px;
-  width: 108px;
-}
-
 .property-item {
-  display: flex;
-  justify-content: space-between;
   color: $details-card-items-text-color;
-  &:not(:last-child) {
-    margin-bottom: 10px;
-  }
+  width: 108px;
+  line-height: 20px;
+  vertical-align: top;
 }
 
 .value-item {
   color: black;
   font-weight: 500;
-  &:first-child {
-    margin-bottom: 6px;
-  }
-  &:not(:first-child) {
-    margin-bottom: 10px;
-  }
+  line-height: 20px;
+  vertical-align: top;
 }
-
-// .genre {
-//   line-height: 20px;
-// }
 
 .movie__vote {
   display: inline-block;
