--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -28,11 +28,11 @@
         </tr>
         <tr>
           <td class='property-item'>Original Title</td>
-          <td class='value-item'>{{original_title}}</td>
+          <td class='value-item origina-title-item'>{{original_title}}</td>
         </tr>
         <tr>
           <td class='property-item'>Genre</td>
-          <td class='value-item'>{{fullGenresList}}</td>
+          <td class='value-item genre'>{{fullGenresList}}</td>
         </tr>
       </table>
 
