--- a/src/sass/components/_theme-switcher.scss
+++ b/src/sass/components/_theme-switcher.scss
@@ -37,7 +37,9 @@ html[data-theme='dark-theme'] {
   .movie__button-trailer,
   .movie__about-header,
   .card__icon,
-  .list-is-empty__text {
+  .list-is-empty__text,
+  .s-title,
+  .similar__movie-title {
     color: #fff;
   }
 
