--- a/src/sass/components/_theme-switcher.scss
+++ b/src/sass/components/_theme-switcher.scss
@@ -39,7 +39,8 @@ html[data-theme='dark-theme'] {
   .card__icon,
   .list-is-empty__text,
   .s-title,
-  .similar__movie-title {
+  .similar__movie-title,
+  .value-item {
     color: #fff;
   }
 
