--- a/src/sass/components/_clear-library-button.scss
+++ b/src/sass/components/_clear-library-button.scss
@@ -59,6 +59,10 @@
   bottom: 110px;
   right: 60px;
 
+  &.hidden {
+    display: none;
+  }
+
   @media screen and (max-width: $tablet-width) {
     bottom: 110px;
     right: 10px;
@@ -68,6 +72,7 @@
     bottom: 110px;
     right: 15px;
   }
+  
 }
 
 .tooltiptext {
